SERVER-109164 Ensure 'phase' field must be present on shards in setFCV command except in dryRun mode (#46203)

GitOrigin-RevId: a0af976611845688ddd89e7868202f527bcbd9af